--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
     "axios": "^0.19.2",
     "materialize-css": "^1.0.0",
     "react": "^16.13.1",
+    "react-currency-masked-input": "^2.5.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "sweetalert2-react": "^0.8.3"
   },
   "scripts": {
