--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.1",
-    "sqlite3": "^5.0.0"
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "sqlite3": "^5.0.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
