--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "passport": "^0.5.2",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "sqlite3": "^5.0.6"
   },
