--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "moment": "^2.29.3",
+    "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
