--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.3",
+    "@mui/material": "^5.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "ajv": "^8.11.0",
     "axios": "^0.27.2",
-    "materialize-css": "^1.0.0",
-    "react": "^16.13.1",
+    "react": "^17.0.0",
     "react-currency-masked-input": "^2.5.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.0",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-router-guards": "^1.0.2",
     "react-scripts": "^5.0.1",
     "react-select": "^3.1.0",
-    "sweetalert2-react": "^0.8.3"
+    "sweetalert2-react": "^0.8.3",
+    "typescript": "^4.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
